--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <span class="label">Seconds</span>
         </div>
     </div>
-    <script src="./index.js"></script>
+    
+<script src="./newindex.js"></script>
 </body>
 
 </html>
